crates/toml_edit/tests/snapshots/invalid/float/trailing-dot-02.stderr
TOML parse error at line 1, column 7
  |
1 | a = 1.
  |       ^
invalid fraction, expected digits
